unpackaged/main/default/objects/Case_Handle_Time_Log__c/Case_Handle_Time_Log__c.object-meta.xml
<CustomObject>
    <description>Captures the time that different Agents start and stop working with a Case, so that individual Agent time can be recorded.</description>
    <label>Case Handle Time Log</label>
    <nameField>
        <displayFormat>CH-{00000}</displayFormat>
        <label>Case Handle Time Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Handle Time Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>