unpackaged/main/default/objects/Case_Handle_Time_Log__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_Handle_Time_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>