unpackaged/main/default/objects/Case_Handle_Time_Log__c/fields/Handle_Time__c.field-meta.xml
<CustomField>
    <fullName>Handle_Time__c</fullName>
    <description>Net Handle time, calculated from start and end times, minus any adjusted minutes.</description>
    <formula>( (End_Time__c - Start_Time__c) *1440 )- Time_Adjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Net Handle time, calculated from start and end times, minus any adjusted minutes.</inlineHelpText>
    <label>Handle Time (mins)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>