unpackaged/main/default/objects/Case_Handle_Time_Log__c/fields/Next_Status__c.field-meta.xml
<CustomField>
    <fullName>Next_Status__c</fullName>
    <label>Next Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Close</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>