unpackaged/main/default/objects/Case_Handle_Time_Log__c/fields/Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Owner_Role__c</fullName>
    <description>Stores a copy of the Case Owner&apos;s Role Name at the time the record is created. This distinguishes between departments</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Owner Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>