unpackaged/main/default/objects/Case_Handle_Time_Log__c/fields/Queue__c.field-meta.xml
<CustomField>
    <fullName>Queue__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>