unpackaged/main/default/objects/Case_Handle_Time_Log__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>Captures the DateTime the agent started working on the case.
Populated by a Flow.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Captures the DateTime the agent started working on the case.
Populated by a Flow.</inlineHelpText>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>