unpackaged/main/default/objects/Case_Handle_Time_Log__c/fields/Time_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Time_Adjustment__c</fullName>
    <description>Allows a Manager/Admin to adjust the time spent on a case.</description>
    <inlineHelpText>Allows a Manager/Admin to adjust the time spent on a case.
For example, if time needs to be reduced by 30 mins, enter 30.</inlineHelpText>
    <label>Time Adjustment (mins)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>